feat: Add leaflet libraries and create the map component

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css" integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI=" crossorigin="" />
+
     <title>A casa nostra</title>
   </head>
   <body>
